# mie-shield

./: .gitignore  README.md  complex-refractive-indices.md  mie_core.py  mie_i18n.py  mie_i18n_strings.py  mie_shield.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: release-notes-v1.0.0.md  release-notes-v1.0.1.md
scripts/: make_icon.py  package-linux.sh  package-macos.sh  package-windows.ps1
tests/: conftest.py  test_calculation_core.py  test_i18n.py
