[project]
name = "mie-shield"
version = "1.0.1"
description = "Mie scattering calculator for extinction, MEC, and transmission in airborne particle mixtures"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.0",
    "PyMieScatt>=1.8.1.1",
    "PySide6>=6.10",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
